[gd_scene load_steps=25 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://SpawnLocation3.tscn" type="PackedScene" id=2]
[ext_resource path="res://Walls.tscn" type="PackedScene" id=3]
[ext_resource path="res://SpawnLocation.tscn" type="PackedScene" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://Orbitron-VariableFont_wght.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://SpawnLocation2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Score.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=26]
size = 444
outline_size = 12
outline_color = Color( 0.129412, 0.152941, 0.180392, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Environment" id=1]
background_mode = 4
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 3.66
ambient_light_sky_contribution = 0.35
fog_color = Color( 0.0705882, 0.243137, 0.423529, 1 )
fog_sun_color = Color( 1, 1, 1, 1 )
fog_sun_amount = 0.62
fog_depth_begin = 1914.8
fog_depth_end = 101.9
fog_depth_curve = 3.4822
fog_transmit_enabled = true
fog_height_enabled = true
fog_height_min = 53.7
fog_height_max = -8.1
fog_height_curve = 2.37841
auto_exposure_scale = 0.06
auto_exposure_min_luma = 0.0
auto_exposure_max_luma = 5.26
ss_reflections_fade_in = 0.369343
ss_reflections_fade_out = 1.56917
ss_reflections_depth_tolerance = 68.5
ssao_radius = 128.0
ssao_intensity = 76.58
ssao_radius2 = 30.67
ssao_intensity2 = 64.39
ssao_bias = 2.676
ssao_light_affect = 0.67
ssao_ao_channel_affect = 0.36
ssao_color = Color( 0.87451, 0.831373, 0.831373, 1 )
ssao_quality = 2
ssao_edge_sharpness = 0.0
dof_blur_far_distance = 0.34
dof_blur_far_transition = 8192.0
dof_blur_far_amount = 1.0
dof_blur_far_quality = 2
dof_blur_near_enabled = true
dof_blur_near_distance = 1.0
dof_blur_near_quality = 2
glow_enabled = true
glow_levels/2 = true
glow_levels/5 = false
glow_intensity = 1.4
glow_strength = 0.7
glow_bloom = 0.3
glow_blend_mode = 1
glow_hdr_scale = 1.67
glow_bicubic_upscale = true
glow_high_quality = true
adjustment_enabled = true
adjustment_brightness = 1.1
adjustment_contrast = 1.17
adjustment_saturation = 1.1

[sub_resource type="Gradient" id=20]
interpolation_mode = 2
offsets = PoolRealArray( 0.354839, 0.767742, 0.858065 )
colors = PoolColorArray( 0.615686, 0.729412, 0.717647, 0.933333, 0.380392, 0.572549, 0.960784, 0.4, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=22]
gradient = SubResource( 20 )

[sub_resource type="Curve" id=21]
_data = [ Vector2( 0.275281, 0 ), 0.0, 65.5364, 0, 0, Vector2( 0.61236, 1 ), -0.145902, -0.145902, 0, 0, Vector2( 1, 0 ), -8.43766, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=23]
curve = SubResource( 21 )

[sub_resource type="Gradient" id=16]
interpolation_mode = 2
colors = PoolColorArray( 1, 1, 1, 1, 0.138977, 0.400546, 0.808594, 1 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 16 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.988764, 0 ), -3.06603, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=25]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
lifetime_randomness = 0.3
trail_divisor = 5
trail_size_modifier = SubResource( 25 )
trail_color_modifier = SubResource( 24 )
emission_shape = 2
emission_box_extents = Vector3( 960, 540, 0 )
flag_disable_z = true
spread = 10.03
gravity = Vector3( 200, 100, 0 )
initial_velocity = 574.26
initial_velocity_random = 1.0
angular_velocity = 720.0
angular_velocity_random = 0.07
orbit_velocity = -0.01
orbit_velocity_random = 1.0
angle_random = 1.0
scale = 2.0
scale_random = 0.75
scale_curve = SubResource( 23 )
color_ramp = SubResource( 22 )
hue_variation = 0.02
hue_variation_random = 0.14

[sub_resource type="Gradient" id=10]
interpolation_mode = 2
offsets = PoolRealArray( 0.354839, 0.767742, 0.858065 )
colors = PoolColorArray( 0.615686, 0.729412, 0.717647, 0.933333, 0.380392, 0.572549, 0.960784, 0.4, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=18]
gradient = SubResource( 10 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0.275281, 0 ), 0.0, 65.5364, 0, 0, Vector2( 0.61236, 1 ), -0.145902, -0.145902, 0, 0, Vector2( 1, 0 ), -8.43766, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=19]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 0.3
emission_shape = 2
emission_box_extents = Vector3( 960, 540, 0 )
flag_disable_z = true
spread = 10.03
gravity = Vector3( 0, 98, 0 )
initial_velocity = 574.26
initial_velocity_random = 1.0
angular_velocity = 720.0
angular_velocity_random = 0.07
orbit_velocity = -0.01
orbit_velocity_random = 1.0
angle_random = 1.0
scale = 2.0
scale_random = 0.75
scale_curve = SubResource( 19 )
color_ramp = SubResource( 18 )
hue_variation = 0.02
hue_variation_random = 0.14

[node name="Global" type="Node2D"]
script = ExtResource( 5 )

[node name="Walls" parent="." instance=ExtResource( 3 )]
light_mask = 2

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Pos1" type="Position2D" parent="SpawnTimer" groups=["spawn"]]
position = Vector2( 660, 100 )

[node name="Pos2" type="Position2D" parent="SpawnTimer" groups=["spawn"]]
position = Vector2( 1260, 100 )

[node name="Pos3" type="Position2D" parent="SpawnTimer" groups=["spawn"]]
position = Vector2( 960, 100 )

[node name="Pos4" type="Position2D" parent="SpawnTimer" groups=["spawn"]]
position = Vector2( 660, 980 )

[node name="Pos5" type="Position2D" parent="SpawnTimer" groups=["spawn"]]
position = Vector2( 1260, 980 )

[node name="Pos6" type="Position2D" parent="SpawnTimer" groups=["spawn"]]
position = Vector2( 960, 980 )

[node name="SpawnTimer2" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="Pos1|1" type="Position2D" parent="SpawnTimer2" groups=["spawn2"]]
position = Vector2( 1400, 540 )

[node name="Pos1|2" type="Position2D" parent="SpawnTimer2" groups=["spawn2"]]
position = Vector2( 1400, 240 )

[node name="Pos1|3" type="Position2D" parent="SpawnTimer2" groups=["spawn2"]]
position = Vector2( 1400, 840 )

[node name="Pos1|4" type="Position2D" parent="SpawnTimer2" groups=["spawn2"]]
position = Vector2( 520, 840 )

[node name="Pos1|5" type="Position2D" parent="SpawnTimer2" groups=["spawn2"]]
position = Vector2( 520, 240 )

[node name="Pos1|6" type="Position2D" parent="SpawnTimer2" groups=["spawn2"]]
position = Vector2( 520, 540 )

[node name="SpawnTimer3" type="Timer" parent="."]
wait_time = 9.5
autostart = true

[node name="Pos2|1" type="Position2D" parent="SpawnTimer3" groups=["dodge"]]
position = Vector2( 520, 100 )

[node name="Pos2|2" type="Position2D" parent="SpawnTimer3" groups=["dodge"]]
position = Vector2( 1400, 100 )

[node name="Pos2|3" type="Position2D" parent="SpawnTimer3" groups=["dodge"]]
position = Vector2( 1400, 980 )

[node name="Pos2|4" type="Position2D" parent="SpawnTimer3" groups=["dodge"]]
position = Vector2( 520, 980 )

[node name="ExtraTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="SpawnLocation1" parent="." instance=ExtResource( 4 )]
position = Vector2( 960, 100 )

[node name="SpawnLocation2" parent="." instance=ExtResource( 7 )]
position = Vector2( 520, 540 )

[node name="SpawnLocation3" parent="." instance=ExtResource( 2 )]
position = Vector2( 520, 100 )

[node name="Score System" type="Control" parent="."]
anchor_right = 0.496
margin_right = 80.0001
margin_bottom = 80.0

[node name="Score" type="Label" parent="Score System"]
margin_left = 380.0
margin_top = 240.0
margin_right = 1538.0
margin_bottom = 797.0
custom_colors/font_color = Color( 0.101961, 0.113725, 0.137255, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 26 )
text = "0"
align = 1
valign = 1
clip_text = true
script = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.925, 0.925 )
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
limit_smoothed = true
smoothing_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Particles2" type="Particles2D" parent="WorldEnvironment"]
position = Vector2( 700, 540 )
amount = 30
lifetime = 2.0
randomness = 0.19
fixed_fps = 60
process_material = SubResource( 15 )

[node name="Particles" type="Particles2D" parent="WorldEnvironment"]
position = Vector2( 700, 540 )
amount = 75
lifetime = 2.0
randomness = 0.19
fixed_fps = 60
process_material = SubResource( 12 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="SpawnTimer2" to="." method="_on_SpawnTimer2_timeout"]
[connection signal="timeout" from="SpawnTimer3" to="." method="_on_SpawnTimer3_timeout"]
[connection signal="timeout" from="ExtraTimer" to="." method="_on_SpawnTimer_timeout"]
